change how the testchain class is exported

--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
   },
   "scripts": {
     "test": "jest --runInBand",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "build": "./scripts/build.sh",
+    "build:watch": "sane ./scripts/build.sh src --wait=10"
   },
   "jest": {
     "globals": {
