--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@makerdao/dai-plugin-testchain",
-  "description": "A dai.js plugin for creating custom testchains.",
+  "name": "@makerdao/testchain-client",
+  "description": "A client for managing custom testchain deployments.",
   "version": "0.0.1",
   "license": "MIT",
   "repository": {},
