--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "repository": {},
   "dependencies": {
     "babel-runtime": "^6.26.0",
+    "debug": "^4.1.1",
     "lodash": "^4.17.11",
     "md5": "^2.2.1",
     "phoenix": "^1.4.0",
