--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@makerdao/dai": "^0.9.10",
+    "@makerdao/dai-plugin-config": "^0.0.1",
     "@makerdao/dai-plugin-governance": "^0.3.5",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^10.0.1",
