--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "debug": "^4.1.1",
     "lodash": "^4.17.11",
     "md5": "^2.2.1",
+    "node-fetch": "^2.3.0",
     "phoenix": "^1.4.0",
     "phoenix_html": "^2.12.0",
     "ramda": "^0.26.1",
