--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "phoenix": "^1.4.0",
     "phoenix_html": "^2.12.0",
     "ramda": "^0.26.1",
+    "rxjs": "^6.4.0",
     "web3-utils": "^1.0.0-beta.36"
   },
   "devDependencies": {
