--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "repository": {},
   "dependencies": {
+    "assert": "^1.4.1",
     "babel-runtime": "^6.26.0",
     "debug": "^4.1.1",
     "lodash": "^4.17.11",
