--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "babel-runtime": "^6.26.0",
     "debug": "^4.1.1",
-    "lodash": "^4.17.11",
+    "lodash.isequal": "^4.5.0",
     "md5": "^2.2.1",
     "node-fetch": "^2.3.0",
     "phoenix": "^1.4.0",
