--- a/config.yml
+++ b/config.yml
@@ -1,8 +1,28 @@
-version: 2.1
-  jobs:
-    build:
-      docker: 
-        - image: circleci/node:4.8.2 # the primary container, where your job's commands are run
-      steps:
-        - checkout # check out the code in the project directory
-        - run: echo "hello world" # run the `echo` command
+version: 2
+jobs:
+  build:
+    docker:
+      - image: circleci/node:lts
+    steps:
+      - checkout
+      - run: npm i yarn
+      - run: yarn
+  test:
+    docker:
+      - image: circleci/node:lts
+    steps:
+      - setup_remote_docker
+      - run: |
+          git clone https://github.com/makerdao/staxx.git
+          cd staxx
+          make run-dev
+          cd ..
+          yarn test
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - build
+      - test:
+          requires:
+            - build
