--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
       - run: |
           git clone https://github.com/makerdao/staxx.git
           cd staxx
-          sudo make run-dev
+          sudo docker-compose -f ./docker-compose-dev.yml up -d
           cd ..
           yarn test
 workflows:
