--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,14 +2,14 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/elixir:1.9.0
+      - image: circleci/node:lts
     steps:
       - checkout
       - run: npm i yarn
       - run: yarn
   test:
     docker:
-      - image: circleci/elixir:1.9.0
+      - image: circleci/node:lts
     steps:
       - setup_remote_docker
       - run: |
@@ -18,6 +18,7 @@ jobs:
           git checkout debug-testchain-client
           sudo docker-compose -f ./docker-compose-dev.yml up -d
           cd ..
+          ls -al
           yarn test
 workflows:
   version: 2
