--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,50 +7,40 @@ jobs:
       - checkout
       - run: npm i yarn
       - run: yarn
-  test:
-    machine:
-      image: ubuntu-1604:201903-01
-      # docker_layer_caching: true # default - false
-    steps:
-      # - setup_remote_docker
-      - run: |
-          whoami
-          ls
-          docker --version
-          ps aux | grep docker
-          service docker start
-          # eval $(docker-machine env dev)
-          # docker-machine ls
-          # set
-          ifconfig | grep inet
-          git clone https://github.com/b-pmcg/staxx.git
-          cd staxx
-          git checkout debug-testchain-client
-          # docker-compose up --build
-          cd ..
-          yarn test
-
   # test:
-  #   docker:
-  #     - image: circleci/node:lts
+  #   machine:
+  #     image: ubuntu-1604:201903-01
+  #     # docker_layer_caching: true # default - false
   #   steps:
   #     - setup_remote_docker
   #     - run: |
-  #         whoami
-  #         ls
-  #         docker --version
-  #         ps aux | grep docker
-  #         service docker start
-  #         # eval $(docker-machine env dev)
-  #         # docker-machine ls
-  #         # set
-  #         ifconfig | grep inet
+  #         git clone https://github.com/makerdao/testchain-stack-vdb
+  #         cd testchain-stack-vdb
+  #         make install
+  #         cd ..
   #         git clone https://github.com/b-pmcg/staxx.git
   #         cd staxx
   #         git checkout debug-testchain-client
   #         # docker-compose up --build
   #         cd ..
   #         yarn test
+
+  test:
+    docker:
+      - image: circleci/node:lts
+    steps:
+      - setup_remote_docker
+      - run: |
+          git clone https://github.com/makerdao/testchain-stack-vdb
+          cd testchain-stack-vdb
+          make install
+          cd ..
+          git clone https://github.com/b-pmcg/staxx.git
+          cd staxx
+          git checkout debug-testchain-client
+          docker-compose up --build
+          cd ..
+          yarn test
 workflows:
   version: 2
   build_and_test:
