--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,7 @@ jobs:
     steps:
       - setup_remote_docker
       - run: |
+          echo "${DEPLOYMENT_KEY}" | base64 -d > "./.id_rsa"
           git clone https://github.com/makerdao/testchain-stack-vdb
           cd testchain-stack-vdb
           make install
