--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
       - setup_remote_docker
       - run: |
           echo "${DEPLOYMENT_KEY}" | base64 -d > "./.id_rsa"
-          git clone https://github.com/makerdao/testchain-stack-vdb
+          git clone git@github.com:makerdao/testchain-stack-vdb.git
           cd testchain-stack-vdb
           make install
           cd ..
