--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,7 @@ jobs:
     steps:
       - setup_remote_docker
       - run: |
+          ssh-keyscan github.com >> ~/.ssh/known_hosts
           echo "${DEPLOYMENT_KEY}" | base64 -d > "./.id_rsa"
           git clone git@github.com:makerdao/testchain-stack-vdb.git
           cd testchain-stack-vdb
