use dev version of testchain

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,8 @@ jobs:
           git clone https://github.com/b-pmcg/staxx.git
           cd staxx
           git checkout debug-testchain-client
-          docker-compose up -d  
+          # docker-compose up -d  
+          make run-dev
           cd ..
           git clone https://github.com/makerdao/testchain-client.git
           cd testchain-client
