skip the private key setup for now

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,8 +19,8 @@ jobs:
       - run:
           name: spin up staxx environment
           command: |
-            ssh-keyscan github.com >> ~/.ssh/known_hosts
-            echo "${DEPLOYMENT_KEY}" | base64 -d > "~/.ssh/id_rsa"
+            #ssh-keyscan github.com >> ~/.ssh/known_hosts
+            #echo "${DEPLOYMENT_KEY}" | base64 -d > "~/.ssh/id_rsa"
             git clone https://github.com/b-pmcg/staxx.git
             cd staxx
             git checkout debug-testchain-client
