--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
           when: on_fail
       - run:
           name: Notification Sucess
-          command: bash ./circleci/notify "success"
+          command: bash .circleci/notify "success"
           when: on_success
 
 workflows:
