--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
             #echo "${DEPLOYMENT_KEY}" | base64 -d > "~/.ssh/id_rsa"
             git clone https://github.com/makerdao/staxx.git
             cd staxx
-            # git checkout debug-testchain-client
+            git checkout develop
             make run-dev
       - run:
           name: run tests
