--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,13 +24,14 @@ jobs:
             git clone https://github.com/makerdao/staxx.git
             cd staxx
             git checkout develop
-            make migrate-test && UUID=${UID} UGID=${GID} make run-test
+            make migrate-test && make run-test
       - run:
           name: run tests
           command: |
             npm i yarn -g
             yarn
             yarn test
+          no_output_timeout: 30m
       - run:
           name: Notifiation Failed
           command: bash .circleci/notify "failed"
